--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="banner">
   <div class="content">
-    <h1 class="mb-5">Materiel de minage crypto</h1>
-    <a routerLink="menu">Commander maintenant <i class="bi bi-arrow-right"></i></a>
+    <h1 class="mb-5">Réparation d'ordinateur & Materiel de minage crypto</h1>
+    <a routerLink="prestation">Prestation<i class="bi bi-arrow-right"></i></a>
+
+    <a routerLink="menu">Boutique<i class="bi bi-arrow-right"></i></a>
   </div>
 </div>
 
