--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="">Stonks Mining</a>
+    <a class="navbar-brand" routerLink="">FIVE M SERVER </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,7 +11,10 @@
           <a class="nav-link active" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="menu" routerLinkActive="active-link">Menu</a>
+          <a class="nav-link" routerLink="menu" routerLinkActive="active-link">Boutique</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="prestation" routerLinkActive="active-link">Prestation</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="about" routerLinkActive="active-link">A propos</a>
