--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
 
-    <div class="col-lg-4" *ngFor="let mn of minerData">
+    <div class="col-lg-4" *ngFor="let mn of downloadData">
 
       <div class="minerbox mt-3 mb-3">
         <img src="{{mn.miningImg}}" alt="">
