--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -1,23 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="">FIVE M SERVER </a>
+    <a class="navbar-brand" routerLink="">TENZOU-DOWNLOADER</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Home</a>
+          <a class="nav-link active" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="menu" routerLinkActive="active-link">Boutique</a>
+          <a class="nav-link" routerLink="menu" routerLinkActive="active-link">Distribution</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="prestation" routerLinkActive="active-link">Prestation</a>
+          <a class="nav-link" routerLink="prestation" routerLinkActive="active-link">Logiciel libre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="about" routerLinkActive="active-link">A propos</a>
+          <a class="nav-link" routerLink="about" routerLinkActive="active-link">Tutoriel</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="contact" routerLinkActive="active-link">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="contact" routerLinkActive="active-link">Contact</a>
