--- a/src/app/pages/menupage/menupage.component.html
+++ b/src/app/pages/menupage/menupage.component.html
@@ -4,21 +4,21 @@
 
     <div class="col-lg-6" *ngIf="menuData">
       <a routerLink="" class="btn btn-sm btn-dark mb-3">Retour</a>
-      <img src="{{menuData[0].miningImg}}" alt="" width="100%">
-      <h1 class="mt-3">{{menuData[0].miningName}}</h1>
-      <p>{{menuData[0].miningDetails}}</p>
+      <img src="{{menuData[0].DownloadImg}}" alt="" width="100%">
+      <h1 class="mt-3">{{menuData[0].DownloadName}}</h1>
+      <p>{{menuData[0].DownloadLink}}</p>
       <p>{{menuData[0].miningPrice | currency:'EUR'}}</p>
     </div>
 
     <div class="col-lg-6">
-      <h1>Entrez vos coordonnées </h1>
-      <form action="">
-        <input type="text" class="form-control" placeholder="Nom et prenom">
-        <input type="text" class="form-control" placeholder="numero">
-        <textarea class="form-control" placeholder="adresse"></textarea>
-        <button class="btn btn-md btn-dark mt-3">Passer la commande </button>
+      <h1>Distribution : {{menuData[0].DownloadName}} </h1>
+      <ng-container>
 
-      </form>
+        <button class="btn btn-md btn-dark mt-3">Télécharger </button>
+
+      </ng-container>
+
+
     </div>
 
   </div>
