fix image not found + btn details  + add data service , à continuer

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -7,11 +7,10 @@
       <div class="minerbox mt-3 mb-3">
         <img src="{{mn.DownloadImg}}" alt="">
         <h1>{{mn.DownloadName}}</h1>
-        <p>{{mn.DownloadLink}}</p>
         <p>{{mn.DownloadDetails}}</p>
         <br>
         <br>
-        <a class="buybtn" [routerLink]="['/menu',mn.id]">Details <i class="bi bi-bag"></i></a>
+        <a class="buybtn" [routerLink]="['/menu',mn.id]">Details <i class="bi bi-arrow-down-circle-fill"></i></a>
 
       </div>
 
