modification menu principal footer home et nav

--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -3,8 +3,7 @@
 
 <!-- nom -->
     <div class="col-lg-6">
-      <h1>StonksMining</h1>
-      <p>Miner bien, miner stonks </p>
+      <h1>TENZOU-DOWNLOADER</h1>
     </div>
     <!-- nav -->
     <div class="col-lg-4">
