--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link" routerLink="prestation" routerLinkActive="active-link">Logiciel libre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="about" routerLinkActive="active-link">Tutoriel</a>
+          <a class="nav-link" routerLink="about" routerLinkActive="active-link">Documentation</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="contact" routerLinkActive="active-link">Blog</a>
