remaniement du projet : ENCORE

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <br>
 <div class="container mt-4 mb-4">
-  <h1 class="text-center"> Stock et produits </h1>
+  <h1 class="text-center"> Contrat intelligent </h1>
   <div class="row">
     <div class="col-lg-3 mt-3" *ngFor="let mn of downloadData;index as i">
           <div class="minerbox" *ngIf="i<=3">
