--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="">TENZOU-DOWNLOADER</a>
+    <a class="navbar-brand" routerLink="">TENZOU-ETHEREUM</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,13 +18,10 @@
           <a class="nav-link" routerLink="menu" routerLinkActive="active-link">Distribution</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="prestation" routerLinkActive="active-link">Logiciel libre</a>
+          <a class="nav-link" routerLink="prestation" routerLinkActive="active-link">Generateur smart-contract</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="about" routerLinkActive="active-link">Documentation</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="contact" routerLinkActive="active-link">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="contact" routerLinkActive="active-link">Contact</a>
