--- a/src/app/pages/prestation/prestation.component.html
+++ b/src/app/pages/prestation/prestation.component.html
@@ -1,122 +1,87 @@
-<section id="labels">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="dl">
-          <div class="brand">
-            <h2>Template serveur FIVE M AYKO</h2>
-          </div>
-          <div class="discount alizarin">30%
-            <div class="type">off</div>
-          </div>
-          <div class="descr">
-            <strong>Mei mucius gloriatur reprimique mollis*.</strong>
-            Ad sonet perfecto antiopam mei, denique molestie ne has.
-          </div>
-          <div class="ends">
-            <small>5 GB </small>
-          </div>
-          <div class="coupon midnight-blue">
-            <a data-toggle="collapse" href="#code-1" class="open-code">Lien mediafire</a>
-            <div id="code-1" class="collapse code">LV5MAY14</div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div  class="dl">
-          <div class="brand">
-            <h2>lacoste</h2>
-          </div>
-          <div class="discount emerald">
-            50%
-            <div class="type">
-              off
-            </div>
-          </div>
-          <div class="descr">
-            <strong>
-              Ea per iuvaret ocurreret*.
-            </strong>
-            sit ea detraxit menandri mediocritatem, in mel dicant mentitum.
-          </div>
-          <div class="ends">
-            <small>
-              * Conditions and restrictions apply.
-            </small>
-          </div>
-          <div class="coupon midnight-blue">
-            <a data-toggle="collapse" href="#code-2" class="open-code">Get a code</a>
-            <div id="code-2" class="collapse in code">
-              MNO123ST
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div  class="dl">
-          <div class="brand">
-            <h2>
-              converse
-            </h2>
-          </div>
-          <div class="discount peter-river">
-            15%
-            <div class="type">
-              off
-            </div>
-          </div>
-          <div class="descr">
-            <strong>
-              Solet consul tractatos ei pro*.
-            </strong>
-            Ei mei quot invidunt explicari, placerat percipitur intellegam.
-          </div>
-          <div class="ends">
-            <small>
-              * Conditions and restrictions apply.
-            </small>
-          </div>
-          <div class="coupon midnight-blue">
-            <a data-toggle="collapse" href="#code-3" class="open-code">Get a code</a>
-            <div id="code-3" class="collapse code">
-              OLV4SY3R
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div  class="dl">
-          <div class="brand">
-            <h2>
-              adidas
-            </h2>
-          </div>
-          <div class="discount amethyst">
-            25%
-            <div class="type">
-              off
-            </div>
-          </div>
-          <div class="descr">
-            <strong>
-              Cu aliquip persius alterum duo*.
-            </strong>
-            Possit equidem disputando usu et, sea invidunt scriptorem in.
-          </div>
-          <div class="ends">
-            <small>
-              * Conditions and restrictions apply.
-            </small>
-          </div>
-          <div class="coupon midnight-blue">
-            <a data-toggle="collapse" href="#code-4" class="open-code">Get a code</a>
-            <div id="code-4" class="collapse code">
-              ZUY4OPLQ
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<div class="container-fluid">
+  <div class="row">
 
+
+    <div class="col-md-6 left">
+<br>
+      <div class="container">
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Open this select menu</option>
+        <option value="1" id="myButton" >One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+        <br>
+        <button type="button" class="btn btn-primary">Primary</button>
+      </div>
+      <br>
+      <div class="container">
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <br>
+        <button type="button" class="btn btn-primary">Primary</button>
+      </div>
+      <br>
+      <div class="container">
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <br>
+        <button type="button" class="btn btn-primary">Primary</button>
+      </div>
+      <br>
+      <div class="container">
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <br>
+        <button type="button" class="btn btn-primary">Primary</button>
+      </div>
+      <br>
+      <div class="container">
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <br>
+        <button type="button" class="btn btn-primary">Primary</button>
+      </div>
+      <br>
+      <div class="container">
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <br>
+        <button type="button" class="btn btn-primary">Primary</button>
+      </div>
+
+
+    </div>
+
+
+    <div class="col-md-6 right">
+
+      <textarea rows="32" cols="87">
+
+      </textarea>
+
+
+    </div>
+
+  </div>
+</div>
